<resources>
    <string name="app_name">Goal  Achiever</string>
    <string name="login_email">Email ID</string>
    <string name="login_pwd">Password</string>
    <string name="login_btn">Login</string>
    <string name="login_forgot_pwd">Forgot Password?</string>
    <string name="login_new_user_tv">New User?</string>
    <string name="forgot_pwd_btn">Send Mail</string>
    <string name="signup_firstname">First Name</string>
    <string name="signup_lastname">Last Name</string>
    <string name="signup_mobile">Mobile</string>
    <string name="login_activity">Login</string>
    <string name="signup_activity">Sign Up</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="goal_smoking">Smoking</string>
    <string name="goal_loseweight">Lose Weight</string>
    <string name="goal_exercise">Exercise</string>
    <string name="goal_moneysave">Money Save</string>
    <string name="exercise_info">I commit to Exercise Regularly</string>
    <string name="duration_week">End</string>
    <string name="exercise_start_date">Start</string>
    <string name="set_goal">Set Goal </string>
    <string name="loseweight">I commit to Lose Weight</string>
    <string name="current_weight">Current Weight in KG</string>
    <string name="current_height">Currrent Height in CM</string>
    <string name="target_weight">Target Weight</string>
    <string name="quitsmoking">I commit to Quit Smoking</string>
    <string name="intake_smoke">Intake of Smokes</string>
    <string name="duration_smoke">Duration of smoke</string>
    <string name="moneysave">I commit to Save Money</string>
    <string name="current_balance">Current Balance</string>
    <string name="exercise_start_time">Time</string>
    <string name="customegoal" >I commit to</string>
    <string name="custom_goal_title">Title of Custom Goal</string>
    <string name="customegoal_btn">Custome Goal</string>


    <string-array name="dayOfWeek">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
</resources>
