<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".LoginActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:contentDescription="@null"
            android:src="@drawable/brand" />

        <EditText
            android:id="@+id/activity_signup_firstname_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/signup_firstname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/activity_signup_lastname_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/signup_lastname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/activity_signup_email_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/activity_signup_password_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/login_pwd"
            android:inputType="numberPassword" />

        <EditText
            android:id="@+id/activity_signup_mobile_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/signup_mobile"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/activity_singup_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/colorAccent"
            android:text="@string/signup_activity"
            android:textColor="@color/colorWhite" />


    </LinearLayout>

</ScrollView>
