<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".MoneySaveInfoActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/moneysave"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/activity_money_save_info_balance_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/current_balance"
            android:inputType="numberDecimal" />



        <EditText
            android:id="@+id/activity_money_save_info_target_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/target_weight"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/activity_money_save_info_target_week_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/duration_week"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/activity_money_save_info_start_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="?attr/editTextBackground"
            android:gravity="center_vertical"
            android:text="@string/exercise_start_date"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="@android:color/darker_gray"  />


        <TextView
            android:id="@+id/activity_money_save_info_time_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="?attr/editTextBackground"
            android:gravity="center_vertical"
            android:text="@string/exercise_start_time"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="@android:color/darker_gray" />

        <Button
            android:id="@+id/activity_money_save_info_setgoal_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorAccent"
            android:text="@string/set_goal"
            android:textColor="@color/colorWhite" />

    </LinearLayout>
</ScrollView>
