<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".LoginActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:contentDescription="@null"
            android:src="@drawable/brand" />

        <EditText
            android:id="@+id/activity_login_email_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/login_email" />

        <EditText
            android:id="@+id/activity_login_password_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/login_pwd" />

        <Button
            android:id="@+id/activity_login_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/colorAccent"
            android:text="@string/login_btn"
            android:textColor="@color/colorWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/activity_login_forgot_pwd_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_forgot_pwd" />

            <TextView
                android:id="@+id/activity_login_new_user_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/login_new_user_tv" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
