<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SelectGoalActivity">

    <Button
        android:id="@+id/activity_select_goal_smoking_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/goal_smoking"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/activity_select_goal_loseweight_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/goal_loseweight"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/activity_select_goal_exercise_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/goal_exercise"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/activity_select_goal_moneysave_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/goal_moneysave"
        android:textColor="@color/colorWhite"
        tools:ignore="DuplicateIds" />

</LinearLayout>